--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                      <artifactId>maven-checkstyle-plugin</artifactId>
                      <version>3.2.0</version>
                      <configuration>
-                         <configLocation>checkstyle/checkstyle.xml</configLocation>
+                         <configLocation>checkstyle/mystyle.xml</configLocation>
                          <encoding>UTF-8</encoding>
                          <consoleOutput>true</consoleOutput>
                          <failsOnError>true</failsOnError>
