--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
             <artifactId>guava</artifactId>
             <version>31.1-jre</version>
         </dependency>
+
+         <dependency>
+             <groupId>com.puppycrawl.tools</groupId>
+             <artifactId>checkstyle</artifactId>
+             <version>9.3</version>
+             <exclusions>
+                 <exclusion>
+                     <groupId>com.google.collections</groupId>
+                     <artifactId>google-collections</artifactId>
+                 </exclusion>
+             </exclusions>
+         </dependency>
     </dependencies>
 
     <!-- Build and Plugins Configuration -->
