--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,4 +1,4 @@
-name: Checkstyle Linter
+name: Checkstyle Tests
 
 on:
   pull_request:
@@ -8,13 +8,15 @@ on:
 jobs:
   checkstyle:
     runs-on: ubuntu-latest
+    env:
+      CHECKSTYLE_SUCCESS: true  # Initialize the variable
 
     steps:
       # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 11
+      # Step 2: Set up Java
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -34,13 +36,23 @@ jobs:
       # Step 4: Run Checkstyle using Maven
       - name: Run Checkstyle
         id: checkstyle
-        run: mvn verify
-        continue-on-error: true
+        run: |
+          mvn verify || echo "Checkstyle failed" && echo "CHECKSTYLE_SUCCESS=false" >> $GITHUB_ENV
 
-      # Step 5: Conditional Cache Save
+      # Step 5: Save Maven Cache only if Checkstyle passed
       - name: Save Maven dependencies
         if: ${{ steps.checkstyle.outcome == 'success' }}
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
+      # Step 6: Check the final status of Checkstyle
+      - name: Final Check
+        run: |
+          if [ "$CHECKSTYLE_SUCCESS" == "false" ]; then
+            echo "Checkstyle errors detected. Marking job as failed."
+            exit 1
+          else
+            echo "All checks passed."
+          fi
